infrastructure/kubernetes/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: pediacare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: pediacare/website:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: pediacare
spec:
  selector:
    app: website
  ports:
    - port: 3001
      targetPort: 3001
